fixes for vertical spacing

--- a/2017/assets/sass/_nav.scss
+++ b/2017/assets/sass/_nav.scss
@@ -54,6 +54,7 @@
     display: inline-block;
     margin-left: 1em;
     color: $colour_dark_grey;
+    text-decoration: none !important;
   }
 
 }
