--- a/2017/assets/sass/_page-topper.scss
+++ b/2017/assets/sass/_page-topper.scss
@@ -24,6 +24,7 @@
 .title-panel--welcome {
   background-image: url('../img/welcome-team-photo2.jpg');
   background-repeat: no-repeat;
+  background-color: $colour_green;
   background-size: cover;
   background-position: center;
 }
