--- a/2017/assets/sass/_sections.scss
+++ b/2017/assets/sass/_sections.scss
@@ -51,7 +51,10 @@
 
 .section--no-vertical-padding {
   padding-top: 0;
-  padding-bottom: 0;
+}
+
+.section--no-top-padding {
+  padding-top: 0;
 }
 
 .section--centred {
